<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/welcome_to"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/video_meeting_conference_app"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textSignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu"
            android:includeFontPadding="false"
            android:text="@string/sign_in_to_your_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/textSignInLabel"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp"
                    />
                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu"
                    android:hint="@string/you_example_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    android:paddingStart="@dimen/_8sdp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu"
                    android:includeFontPadding="false"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp"
                    />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu"
                    android:hint=" \u2022 \u2022 \u2022 \u2022 \u2022 \u2022 \u2022 \u2022 \u2022 \u2022"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    android:paddingStart="@dimen/_8sdp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardSignIn"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/sign_in"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_13ssp"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <TextView
            android:id="@+id/txtNoAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/frameLayout"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/don_t_have_an_account"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/ubuntu"
            android:includeFontPadding="false"
            />

        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="SIGN UP"
            android:gravity="center"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/ubuntu"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/txtNoAcc"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>