<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_meeting_invitation"
    tools:context=".activity.OutgoingInvitationActivity">

    <ImageView
        android:id="@+id/imageMeetingType"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorTextIcon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/sending_meeting_invitation"
        android:textColor="@color/colorTextIcon"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMeetingType" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textFirstChar"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/background_meeting_invitation_user_icon"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_30ssp"
            android:text="D"
            />

        <TextView
            android:id="@+id/textUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/colorTextIcon"
            android:textSize="@dimen/_18ssp"
            android:text="@string/dhiraj"
            />

        <TextView
            android:id="@+id/textUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/colorTextIcon"
            android:textSize="@dimen/_11ssp"
            android:text="@string/you_example_com"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageStopInvitation"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@drawable/background_reject_invitation"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_8sdp"
        android:src="@drawable/ic_reject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorTextIcon" />


</androidx.constraintlayout.widget.ConstraintLayout>